--- a/anmeldetool-web/src/main/web/src/app/events/events-detail/events-detail.component.html
+++ b/anmeldetool-web/src/main/web/src/app/events/events-detail/events-detail.component.html
@@ -12,10 +12,10 @@
     <div class="col-sm-3">
       <span *ngIf="anlass.startDatum === anlass.endDatum">am</span>
       <span *ngIf="anlass.startDatum !== anlass.endDatum">von</span>:
-      {{ anlass.startDatum | date: "EEEE, d MMMM , yyyy" }}
+      {{ anlass.startDatum | date: "EEEE, d MMMM , yyyy":"GMT+1":"DE-CH" }}
     </div>
     <div class="col-sm-3" *ngIf="anlass.startDatum !== anlass.endDatum">
-      bis: {{ anlass.endDatum | date: "EEEE, d MMMM , yyyy" }}
+      bis: {{ anlass.endDatum | date: "EEEE, d MMMM , yyyy":"GMT+1":"DE-CH" }}
     </div>
   </div>
 
