--- a/anmeldetool-web/src/main/web/src/app/events/events-detail/wertungsrichter-chip/wertungsrichter-chip.component.css
+++ b/anmeldetool-web/src/main/web/src/app/events/events-detail/wertungsrichter-chip/wertungsrichter-chip.component.css
@@ -1,6 +1,8 @@
 .chip {
   transition: box-shadow 280ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 7px 12px;
+  margin-top: 2px;
+  margin-bottom: 2px;
   border-radius: 16px;
   align-items: center;
   cursor: default;
