--- a/anmeldetool-web/src/main/web/src/app/events/events-detail/wertungsrichter-chip/wertungsrichter-slot/wertungsrichter-slot.component.html
+++ b/anmeldetool-web/src/main/web/src/app/events/events-detail/wertungsrichter-chip/wertungsrichter-slot/wertungsrichter-slot.component.html
@@ -5,7 +5,7 @@
       'label-red': !einsatz.eingesetzt
     }"
     [(ngModel)]="einsatz.eingesetzt"
-    [disabled]="canEdit()"
+    [disabled]="!canEdit()"
     (ngModelChange)="userEingesetztgmodelchange($event)"
     >{{ getSlotText() }}</mat-checkbox
   >
