Started and sorted

--- a/anmeldetool-web/src/main/web/src/app/verein/teilnehmer/teilnehmer-table/teilnehmer-table.component.html
+++ b/anmeldetool-web/src/main/web/src/app/verein/teilnehmer/teilnehmer-table/teilnehmer-table.component.html
@@ -114,6 +114,7 @@
           <div class="below">
             <!--               [disabled]="isChangesDisabled(anlass)" -->
             <mat-checkbox
+              (click)="clicked($event, colIndex)"
               (ngModelChange)="checkedClicked($event, colIndex)"
               [ngModel]="checked[colIndex]"
               [disabled]="isChangesDisabled(anlass)"
