--- a/anmeldetool-web/src/main/web/src/app/verein/teilnehmer/teilnehmer-table/teilnehmer-table.component.html
+++ b/anmeldetool-web/src/main/web/src/app/verein/teilnehmer/teilnehmer-table/teilnehmer-table.component.html
@@ -230,6 +230,7 @@
   [pageSize]="pageSize"
   [pageSizeOptions]="[15, 20, 25, 50, 100]"
   [length]="anzahlTeilnehmer"
+  [disabled]="isDirty()"
 >
 </mat-paginator>
 
