--- a/anmeldetool-web/src/main/web/src/app/verein/new-anmelder/new-anmelder.component.html
+++ b/anmeldetool-web/src/main/web/src/app/verein/new-anmelder/new-anmelder.component.html
@@ -27,6 +27,7 @@
         [showBenutzername]="false"
       ></app-user>
     </mat-dialog-content>
+    <mat-error *ngIf="error" class="error"> {{ errorMessage }}</mat-error>
     <button mat-button (click)="cancel()">Abbrechen</button>
     <button mat-button type="submit" [disabled]="!form.valid || !userValid">
       Speichern
