--- a/anmeldetool-web/src/main/web/src/app/verein/profile/profile.component.css
+++ b/anmeldetool-web/src/main/web/src/app/verein/profile/profile.component.css
@@ -1,37 +1,41 @@
 mat-form-field {
   min-width: 400px;
   max-width: 400px;
-  width: 400px
+  width: 400px;
 }
 .label {
   color: rgba(0, 0, 0, 0.54);
   margin: 0 0 0px;
 }
+.unsafed {
+  color: var(--ztv-warning);
+}
 em {
-    float: right;
-    color: #E05C65;
-    padding-left: 10px;
+  float: right;
+  color: #e05c65;
+  padding-left: 10px;
 }
 .error input {
-    background-color: #E3C3C5;
+  background-color: #e3c3c5;
 }
 .error ::-webkit-input-placeholder {
-    color: #999;
+  color: #999;
 }
 .error ::-moz-placeholder {
-    color: #999;
+  color: #999;
 }
-.error :-moz-placeholder{
-    color: #999;
+.error :-moz-placeholder {
+  color: #999;
 }
 .error :-ms-input-placeholder {
-    color: #999;
-    position: relative;
-    bottom: 45px;
-  }
+  color: #999;
+  position: relative;
+  bottom: 45px;
+}
 .mat-fab {
   right: 20px;
   bottom: 10px;
   left: auto;
   position: absolute;
+  z-index: 99;
 }
