--- a/anmeldetool-web/src/main/web/src/app/verein/new-anmelder/new-anmelder.component.html
+++ b/anmeldetool-web/src/main/web/src/app/verein/new-anmelder/new-anmelder.component.html
@@ -25,6 +25,7 @@
         (valid)="updateUserValid($event)"
         [showPassword]="true"
         [showBenutzername]="false"
+        [mustShowPassword]="true"
       ></app-user>
     </mat-dialog-content>
     <mat-error *ngIf="error" class="error"> {{ errorMessage }}</mat-error>
