--- a/anmeldetool-web/src/main/web/src/app/verein/profile/user-form/user-form.component.html
+++ b/anmeldetool-web/src/main/web/src/app/verein/profile/user-form/user-form.component.html
@@ -9,6 +9,7 @@
         [(user)]="user"
         [showPassword]="isOwner()"
         [showBenutzername]="true"
+        [mustShowPassword]="false"
         (valid)="updateUserValid($event)"
       ></app-user>
     </div>
