--- a/anmeldetool-web/src/main/web/src/app/events/event-thumbnail/event-thumbnail.component.html
+++ b/anmeldetool-web/src/main/web/src/app/events/event-thumbnail/event-thumbnail.component.html
@@ -26,10 +26,10 @@
       />
     </div>
     <div *ngIf="vereinStarted" class="col-sm-3 verticalAlign">
-      Dein Verein started
+      Dein Verein startet
     </div>
     <div *ngIf="!vereinStarted" class="col-sm-3 verticalAlign">
-      Dein Verein started nicht
+      Dein Verein startet nicht
     </div>
   </div>
 
