--- a/anmeldetool-web/src/main/web/src/app/events/events-detail/events-detail.component.html
+++ b/anmeldetool-web/src/main/web/src/app/events/events-detail/events-detail.component.html
@@ -43,7 +43,7 @@
         [(ngModel)]="vereinStarted"
         [disabled]="isStartedCheckboxDisabled()"
         (ngModelChange)="vereinStartedClicked($event)"
-        >Verein started</mat-checkbox
+        >Verein startet</mat-checkbox
       >
     </div>
   </div>
