--- a/anmeldetool-web/src/main/web/src/app/verein/teilnehmer/teilnehmer-table/teilnehmer-table.component.html
+++ b/anmeldetool-web/src/main/web/src/app/verein/teilnehmer/teilnehmer-table/teilnehmer-table.component.html
@@ -127,7 +127,7 @@
               (ngModelChange)="checkedClicked($event, colIndex)"
               [ngModel]="checked[colIndex]"
               [disabled]="isChangesDisabled(anlass)"
-              >Verein started
+              >Verein startet
             </mat-checkbox>
           </div>
         </mat-header-cell>
